--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "configure": "node scripts/generate-config.js",
+    "prestart": "node scripts/generate-config.js",
+    "preandroid": "node scripts/generate-config.js",
+    "preios": "node scripts/generate-config.js"
   },
   "dependencies": {
     "react": "19.1.1",
