--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,3 +117,6 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+// Ensure vector icon fonts are bundled with the Android app
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
