--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "preios": "node scripts/generate-config.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native/new-app-screen": "0.82.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "@react-native/new-app-screen": "0.82.1",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-date-picker": "^5.0.13",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-vector-icons": "^10.2.0",
-    "@react-native-async-storage/async-storage": "^1.23.1"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
