--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native/new-app-screen": "0.82.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-country-picker-modal": "^1.11.0",
     "react-native-date-picker": "^5.0.13",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2",
