--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.82.1",
     "react-native-country-picker-modal": "^1.11.0",
     "react-native-date-picker": "^5.0.13",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.2.0"
