--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native/new-app-screen": "0.82.1",
+    "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-config": "^1.5.10",
     "react-native-country-picker-modal": "^1.11.0",
     "react-native-date-picker": "^5.0.13",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
