--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/native": "^7.1.19",
     "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
