--- a/ios/hr_addons/Info.plist
+++ b/ios/hr_addons/Info.plist
@@ -36,6 +36,12 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your photo library to attach receipt images.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs permission to save selected receipt images.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow camera access to capture receipt images.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
