--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.26.18",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.3.0"
   },
