--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preios": "node scripts/generate-config.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.19",
@@ -24,6 +24,8 @@
     "react-native-config": "^1.5.10",
     "react-native-country-picker-modal": "^1.11.0",
     "react-native-date-picker": "^5.0.13",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
