--- a/package.json
+++ b/package.json
@@ -17,21 +17,30 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native/new-app-screen": "0.82.1",
-    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/bottom-tabs": "^7.8.8",
+    "@react-navigation/native": "^7.1.22",
     "axios": "^1.13.2",
-    "react": "19.1.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-is": "^19.2.0",
     "react-native": "0.82.1",
+    "react-native-app-auth": "^8.1.0",
     "react-native-config": "^1.5.10",
-    "react-native-country-picker-modal": "^1.11.0",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^5.0.13",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-linear-gradient": "^2.8.3",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-maps": "^1.26.18",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-reanimated": "^4.1.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-svg": "^15.15.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
