--- a/package.json
+++ b/package.json
@@ -1,68 +1,67 @@
 {
-  "name": "hr_addons",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest",
-    "configure": "node scripts/generate-config.js",
-    "prestart": "node scripts/generate-config.js",
-    "preandroid": "node scripts/generate-config.js",
-    "preios": "node scripts/generate-config.js"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^7.6.4",
-    "@react-native/new-app-screen": "0.82.1",
-    "@react-navigation/bottom-tabs": "^7.8.8",
-    "@react-navigation/native": "^7.1.22",
-    "axios": "^1.13.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-is": "^19.2.0",
-    "react-native": "0.82.1",
-    "react-native-app-auth": "^8.1.0",
-    "react-native-config": "^1.5.10",
-    "react-native-country-picker-modal": "^2.0.0",
-    "react-native-date-picker": "^5.0.13",
-    "react-native-fs": "^2.20.0",
-    "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "^2.29.1",
-    "react-native-image-picker": "^7.1.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-linear-gradient": "^2.7.3",
-    "react-native-maps": "^1.26.18",
-    "react-native-reanimated": "^4.1.5",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
-    "react-native-svg": "^15.15.0",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.6.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.82.1",
-    "@react-native/eslint-config": "0.82.1",
-    "@react-native/metro-config": "0.82.1",
-    "@react-native/typescript-config": "0.82.1",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.1",
-    "@types/react-test-renderer": "^19.1.0",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.1.1",
-    "typescript": "^5.8.3"
-  },
-  "engines": {
-    "node": ">=20"
-  }
+    "name": "hr_addons",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "lint": "eslint .",
+        "start": "react-native start",
+        "test": "jest",
+        "configure": "node scripts/generate-config.js",
+        "prestart": "node scripts/generate-config.js",
+        "preandroid": "node scripts/generate-config.js",
+        "preios": "node scripts/generate-config.js"
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.24.0",
+        "@react-native-community/datetimepicker": "^7.6.4",
+        "@react-native/new-app-screen": "0.82.1",
+        "@react-navigation/bottom-tabs": "^7.8.8",
+        "@react-navigation/native": "^7.1.22",
+        "axios": "^1.13.2",
+        "react": "18.2.0",
+        "react-is": "^18.2.0",
+        "react-native": "0.82.1",
+        "react-native-app-auth": "^8.1.0",
+        "react-native-config": "^1.5.10",
+        "react-native-country-picker-modal": "^2.0.0",
+        "react-native-date-picker": "^5.0.13",
+        "react-native-fs": "^2.20.0",
+        "react-native-gesture-handler": "^2.29.1",
+        "react-native-image-picker": "^7.1.2",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
+        "react-native-linear-gradient": "^2.7.3",
+        "react-native-location": "^2.5.0",
+        "react-native-maps": "^1.26.18",
+        "react-native-reanimated": "^4.1.5",
+        "react-native-safe-area-context": "^5.6.2",
+        "react-native-screens": "^4.18.0",
+        "react-native-svg": "^15.15.0",
+        "react-native-vector-icons": "^10.3.0",
+        "react-native-worklets": "^0.6.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@babel/preset-env": "^7.25.3",
+        "@babel/runtime": "^7.25.0",
+        "@react-native-community/cli": "20.0.0",
+        "@react-native-community/cli-platform-android": "20.0.0",
+        "@react-native-community/cli-platform-ios": "20.0.0",
+        "@react-native/babel-preset": "0.82.1",
+        "@react-native/eslint-config": "0.82.1",
+        "@react-native/metro-config": "0.82.1",
+        "@react-native/typescript-config": "0.82.1",
+        "@types/jest": "^29.5.13",
+        "@types/react": "^18.2.66",
+        "@types/react-test-renderer": "^18.0.7",
+        "eslint": "^8.19.0",
+        "jest": "^29.6.3",
+        "prettier": "2.8.8",
+        "react-test-renderer": "18.2.0",
+        "typescript": "^5.8.3"
+    },
+    "engines": {
+        "node": ">=20"
+    }
 }
