--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.24",
     "axios": "^1.13.2",
-    "react": "19.1.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-is": "^19.2.0",
-    "react-native": "^0.83.0",
+    "react-native": "0.82.1",
     "react-native-app-auth": "^8.1.0",
     "react-native-config": "^1.5.10",
     "react-native-country-picker-modal": "^2.0.0",
@@ -33,7 +34,6 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.7.3",
-    "react-native-maps": "^1.26.18",
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
@@ -48,22 +48,18 @@
     "@react-native-community/cli": "20.0.0",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.83.0",
-    "@react-native/eslint-config": "0.83.0",
-    "@react-native/metro-config": "0.83.0",
-    "@react-native/typescript-config": "0.83.0",
+    "@react-native/babel-preset": "0.81.1",
+    "@react-native/eslint-config": "0.81.1",
+    "@react-native/metro-config": "0.81.1",
+    "@react-native/typescript-config": "0.81.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "19.1.1",
+    "@types/react": "18.2.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.1.1",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.8.3"
-  },
-  "overrides": {
-    "react": "19.1.1",
-    "react-test-renderer": "19.1.1"
   },
   "engines": {
     "node": ">=20"
